--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     <header>
         <div class="dentro">
             <div class="logo">
-                <ion-icon name="logo-instagram"></ion-icon>
+                <a href="https://globo.com" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
             </div>
             <div class="separador"></div>
             <div class="app-name">
-                <img src="imagens/logo.png" alt="nome-do-app">        
+                <a href="https://globo.com" target="_blank"><img src="imagens/logo.png" alt="nome-do-app"></a>
             </div>
             <div class="pesquisar">
                 <p>Pesquisar</p>
             </div>
             <div class="icons">
-                <ion-icon name="paper-plane-outline"></ion-icon>
-                <ion-icon class="none" name="compass-outline"></ion-icon>
-                <ion-icon class="none" name="heart-outline"></ion-icon>
-                <ion-icon class="none" name="person-outline"></ion-icon>
+                <a href="https://globo.com" target="_blank"><ion-icon name="paper-plane-outline"></ion-icon></a>
+                <a href="https://globo.com" target="_blank"><ion-icon class="none" name="compass-outline"></ion-icon></a>
+                <a href="https://globo.com" target="_blank"><ion-icon class="none" name="heart-outline"></ion-icon></a>
+                <a href="https://globo.com" target="_blank"><ion-icon class="none" name="person-outline"></ion-icon></a>
             </div>
         </div>
     </header>
@@ -36,35 +36,35 @@
         <div class="pagina">
         <div class="stories">
             <div class="storie st">
-                <img src="imagens/9gag 1.png" alt="">
+                <a href="https://globo.com" target="_blank"><img src="imagens/9gag 1.png" alt=""></a>
                 <p class="nome-storie">9gag</p>
             </div>
             <div class="storie">
-                <img src="imagens/meowed 1.png" alt="">
+                <a href="https://globo.com" target="_blank"><img src="imagens/meowed 1.png" alt=""></a>
                 <p class="nome-storie">meowed</p>
             </div>
             <div class="storie">
-                <img src="imagens/barked 1.png" alt="">
+                <a href="https://globo.com" target="_blank"><img src="imagens/barked 1.png" alt=""></a>
                 <p class="nome-storie">barked</p>
             </div>
             <div class="storie">
-                <img src="imagens/nathanwpylestrangeplanet 1.png" alt="">
+                <a href="https://globo.com" target="_blank"><img src="imagens/nathanwpylestrangeplanet 1.png" alt=""></a>
                 <p class="nome-storie">nathanwpylestrangeplanet</p>
             </div>
             <div class="storie">
-                <img src="imagens/wawawiwacomicsa 1.png" alt="">
+                <a href="https://globo.com" target="_blank"><img src="imagens/wawawiwacomicsa 1.png" alt=""></a>
                 <p class="nome-storie">wawawiwacomicsa</p>
             </div>
             <div class="storie">
-                <img src="imagens/respondeai 1.png" alt="">
+                <a href="https://globo.com" target="_blank"><img src="imagens/respondeai 1.png" alt=""></a>
                 <p class="nome-storie">respondeai</p>
             </div>
             <div class="storie">
-                <img src="imagens/filomoderna 1.png" alt="">
+                <a href="https://globo.com" target="_blank"><img src="imagens/filomoderna 1.png" alt=""></a>
                 <p class="nome-storie">filomoderna</p>
             </div>
             <div class="storie">
-                <img src="imagens/memeriagourmet 1.png" alt="">
+                <a href="https://globo.com" target="_blank"><img src="imagens/memeriagourmet 1.png" alt=""></a>
                 <p class="nome-storie">memeriagourmet</p>
             </div>
             <div class="seta">
@@ -74,8 +74,8 @@
         <div class="posts">
         <div class="primeiro-post">
         <div class="top">
-            <img src="imagens/meowed 2.png" alt="">
-            <p>meowed</p>
+            <a href="https://globo.com" target="_blank"><img src="imagens/meowed 2.png" alt=""></a>
+            <a href="https://globo.com" target="_blank"><p>meowed</p></a>
             <ion-icon name="ellipsis-horizontal"></ion-icon>        </div>
         <div class="img">
             <img src="imagens/gato-telefone 1.png" alt="">
@@ -95,8 +95,8 @@
     </div>
     <div class="segundo-post">
         <div class="top">
-            <img src="imagens/barked 2.png" alt="">
-            <p>barked</p>
+            <a href="https://globo.com" target="_blank"><img src="imagens/barked 2.png" alt=""></a>
+            <a href="https://globo.com" target="_blank"><p>barked</p></a>
             <ion-icon name="ellipsis-horizontal"></ion-icon>        </div>
         <div class="img">
             <img src="imagens/dog 1.png" alt="">
@@ -107,7 +107,7 @@
                 <ion-icon name="chatbubble-outline"></ion-icon>
                 <ion-icon name="paper-plane-outline"></ion-icon>
             </div>            
-            <ion-icon name="bookmark-outline"></ion-icon>
+            <ion-icon class="tag" name="bookmark-outline"></ion-icon>
             <div class="curtidas">
                 <img src="imagens/adorableanimals 2.png" alt="">
                 <p>Curtido por <strong> adorable_animals </strong> e <strong> outras 99.159 pessoas</strong></p>
@@ -116,9 +116,10 @@
     </div>
     <div class="terceiro-post">
         <div class="top">
-            <img src="imagens/meowed 2.png" alt="">
-            <p>meowed</p>
-            <ion-icon name="ellipsis-horizontal"></ion-icon>        </div>
+            <a href="https://globo.com" target="_blank"><img src="imagens/meowed 2.png" alt=""></a>
+            <a href="https://globo.com" target="_blank"><p>meowed</p></a>
+            <ion-icon name="ellipsis-horizontal"></ion-icon>
+        </div>
         <div class="img">
             <img src="imagens/gato-telefone 1.png" alt="">
         </div>
@@ -128,50 +129,54 @@
                 <ion-icon name="chatbubble-outline"></ion-icon>
                 <ion-icon name="paper-plane-outline"></ion-icon>
             </div>
-            <ion-icon name="bookmark-outline"></ion-icon>
+            <ion-icon class="tag" name="bookmark-outline"></ion-icon>
+            <div class="curtidas">
+                <img src="imagens/adorableanimals 2.png" alt="">
+                <p>Curtido por <strong> adorable_animals </strong> e <strong> outras 99.159 pessoas</strong></p>
+            </div>
         </div>
     </div>
 </div>
         </div>
         <div class="sidebar">
             <div class="nomes">
-                <img src="imagens/catanacomics 1.png" alt="">
-                <p class="nomezinho">catanacomics<br><strong class="nominho">Catana</strong></p>
+                <a href="https://globo.com" target="_blank"><img src="imagens/catanacomics 1.png" alt="">
+                <p class="nomezinho">catanacomics</a><br><strong class="nominho">Catana</strong></p>
             </div>
             <div>
                 <p class="suges">Sugestões para você</p>
                 <p class="ver">Ver Tudo</p>
             </div>
             <div>
-                <img src="imagens/badvibesmemes 1.png" alt="">
-                <p class="nomezinho">bad.vibes.memes<br><strong class="seg-vc">Segue você</strong></p>
+                <a href="https://globo.com" target="_blank"><img src="imagens/badvibesmemes 1.png" alt="">
+                <p class="nomezinho">bad.vibes.memes</a><br><strong class="seg-vc">Segue você</strong></p>
                 <p class="seguir">Seguir</p>
             </div>
             <div>
-                <img src="imagens/chibirdart 1.png" alt="">
-                <p class="nomezinho">chibirdart<br><strong class="seg-vc">Segue você</strong></p>
+                <a href="https://globo.com" target="_blank"><img src="imagens/chibirdart 1.png" alt="">
+                <p class="nomezinho">chibirdart</a><br><strong class="seg-vc">Segue você</strong></p>
                 <p class="seguir">Seguir</p>
             </div>
             <div>
-                <img src="imagens/razoesparaacreditar 1.png" alt="">
-                <p class="nomezinho">razoesparaacreditar<br><strong class="seg-vc">Novo no Instagram</strong></p>
+                <a href="https://globo.com" target="_blank"><img src="imagens/razoesparaacreditar 1.png" alt="">
+                <p class="nomezinho">razoesparaacreditar</a><br><strong class="seg-vc">Novo no Instagram</strong></p>
                 <p class="seguir">Seguir</p>
             </div>
             <div>
-                <img src="imagens/adorableanimals 1.png" alt="">
-                <p class="nomezinho">adorable_animals<br><strong class="seg-vc">Segue você</strong></p>
+                <a href="https://globo.com" target="_blank"><img src="imagens/adorableanimals 1.png" alt="">
+                <p class="nomezinho">adorable_animals</a><br><strong class="seg-vc">Segue você</strong></p>
                 <p class="seguir">Seguir</p>
             </div>
             <div>
-                <img src="imagens/smallcutecats 1.png" alt="">
-                <p class="nomezinho">smallcutecats<br><strong class="seg-vc">Segue você</strong></p>
+                <a href="https://globo.com" target="_blank"><img src="imagens/smallcutecats 1.png" alt="">
+                <p class="nomezinho">smallcutecats</a><br><strong class="seg-vc">Segue você</strong></p>
                 <p class="seguir">Seguir</p>
             </div>
             <div class="info">
-                <p>Sobre • Ajuda • Imprensa • API • Carreiras • Privacidade •
+                <a href="https://globo.com" target="_blank"><p>Sobre • Ajuda • Imprensa • API • Carreiras • Privacidade •
                     Termos • Localizações • Contas mais relevantes • Hashtags • 
                     Idioma</p>
-                <p>© 2021 INSTAGRAM DO FACEBOOK</p>
+                <p>© 2021 INSTAGRAM DO FACEBOOK</p></a>
             </div>
         </div>
     </div>
